# K8sWhisperer_demo

./: .env.example  .gitignore  HOW_TO_RUN.md  IMPLEMENTATION_ISSUES.md  MCP_ANALYSIS.md  README.md  RUNBOOK.md  audit_log.json  config.py  conftest.py  crashloop.yaml  main.py  package-lock.json  pyproject.toml  requirements.txt  run_dev.ps1  run_frontend.ps1  test_alert_decision.py  test_rule_engine.py
K8sWhisperer_Frontend/: package-lock.json  package.json  rbac.yaml
K8sWhisperer_Frontend/src/: integration.js
K8sWhisperer_New/: index.html  package-lock.json  package.json  vite.config.js
K8sWhisperer_New/src/: App.jsx  index.css  integration.js
agent/: graph.py  llm_factory.py  prompts_util.py  rollout_guard.py  rule_detector.py  rule_engine.py  state.py
agent/nodes/: alert_decision.py  detect.py  diagnose.py  execute.py  explain.py  hitl.py  observe.py  plan.py  safety_gate.py
agent/prompts/: detect_system.txt  diagnose_system.txt  explain_system.txt  plan_system.txt
mcp_servers/: __init__.py  base_mcp.py  kubectl_mcp.py  kubectl_mock.py  prometheus_mcp.py  rbac_checker.py  slack_mcp.py
schemas/: __init__.py  constants.py  enums.py  models.py
scripts/: download_kubectl.ps1  run_with_mock_cluster.ps1  verify_setup.py
src/: App.tsx  index.css  types.ts
src/components/: AssetList.tsx  Dashboard.tsx  PortfolioValueChart.tsx  (+1 more)
tests/: test_graph_build.py
utils/: audit.py  llm_invoke.py  log_chunker.py  log_summarizer.py  mock_state.py  retry.py  structured_logger.py  ui_state.py
webhook/: handlers.py  server.py  state_store.py  verification.py
(+17 files in other folders)
