[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-whisperer"
version = "0.1.0"
description = "Autonomous Kubernetes incident response agent (LangGraph + MCP-style kubectl)"
readme = "RUNBOOK.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.40",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "slack-sdk>=3.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "agent*", "agent.nodes*", "mcp_servers*", "utils*", "webhook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
